# ai-teacher

./: .gitignore  README.md
api/: Dockerfile  Makefile  celery_app.py  database.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  start_workers.sh  tasks.py
api/uploads/: 1_00001_2025-03-23.webm  1_00002_2025-03-23.webm
web/: index.html  package-lock.json  package.json
web/src/: App.vue  main.js
web/src/router/: index.js
web/src/views/: Layout.vue
web/src/views/questions/: QuestionList.vue
web/src/views/recite/: RecitePage.vue
web/src/views/students/: StudentList.vue
